[refactor/#92] 월별 기록 확인 매서드 중복 제거 및 Converter에서 서비스 로직 분리